src/objects/Design_Decision__c.object
<CustomObject>
    <fields>
        <fullName>Business_Solution__c</fullName>
        <label>Business Solution</label>
        <referenceTo>Business_Solution__c</referenceTo>
        <relationshipLabel>Design Decisions / Technical Debt</relationshipLabel>
        <relationshipName>Design_Decisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Challenge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Design_Challenge__c.Business_Solution__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Solution__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Design_Challenge__c</referenceTo>
        <relationshipLabel>Design Decisions</relationshipLabel>
        <relationshipName>Design_Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Technical_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Technical Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <label>Requirement</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Design Decision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DD-{0}</displayFormat>
        <label>DD Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Design Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>